# project_gadol

./: README.md  git_ignore.gitignore  main.py  main_test.py  project_gadol.code-workspace  pyproject.toml  requiremrnt.txt
data/: participants.the.one.that.works.csv
presentation_shortVersion/: PresentationPython (1).pptx  ~$PresentationPython (1).pptx
src/: __main__.py  main.py
src/mind_wandering_intrusive_thoughts.egg-info/: PKG-INFO
src/project_gadol.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/tests/: test_main.py  tests_newdataframe.py
tests/: draft_for_now.py  test_main.py  tests_newdataframe.py
tests/tools/: test_exploration.py  tests_anlysis.py  tests_newdataframe.py
